--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Muaid Mughrabi"]
 
 [tool.poetry.dependencies]
 python = "^3.12"
+numpy = "1.26.2"
+scipy = "1.11.4"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.6.0"
