--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,11 +34,7 @@ jobs:
     - name: Install dependencies
       run: |
         poetry install
-
-#    - name: Run tests
-#      run: |
-#        poetry run python -m unittest discover -s tests
         
     - name: Test with pytest
       run: |
-        pytest
+        python -m unittest discover -s tests
